Frontend requires unique identifier as `id`
